# MediCore

MediCore/: .gitattributes  README.md  main.cpp
MediCore/src/core/: Admin.cpp  Admin.h  Appointment.cpp  Appointment.h  Bill.h  Doctor.cpp  Doctor.h  FileHandler.h  Person.cpp  Person.h  Prescription.cpp  Storage.h  Validator.cpp  Validator.h
MediCore/src/exceptions/: FileNotFoundException.cpp  InsufficientFundsException.cpp  InsufficientFundsException.h  InvalidInputException.cpp  SlotUnavailableException.cpp  SlotUnavailableException.h
MediCore/src/ui/: AdminMenu.cpp  AdminMenu.h  GUI.cpp  GUI.h  LoginScreen.cpp  LoginScreen.h  PatientMenu.cpp
MediCore2/: CMakeLists.txt
MediCore2/data/: appointments.txt  bills.txt  patients.txt
MediCore2/src/core/: Bill.cpp  FileHandler.cpp  Patient.cpp  Patient.h  Prescription.h
MediCore2/src/exceptions/: FileNotFoundException.h  HospitalException.cpp  HospitalException.h  InvalidInputException.h
MediCore2/src/ui/: DoctorMenu.cpp  DoctorMenu.h  PatientMenu.h
MediCore2/src/utils/: MyString.h
